# SVF-Project

./: .gitignore  README.md  build.sh  custom-build.sh  test.sh
graphs/: call_graph_example.bc.dot  call_graph_example2.bc.dot  call_graph_example3.bc.dot  call_graph_test1.bc.dot  call_graph_test2.bc.dot  call_graph_test3.bc.dot  icfg_example.bc.dot  icfg_example2.bc.dot  icfg_example3.bc.dot  icfg_test1.bc.dot  icfg_test2.bc.dot  icfg_test3.bc.dot
repo-resources/: Dockerfile
repo-resources/6430-project-document/: project.tex
repo-resources/project-document/: project.tex
src/: CMakeLists.txt  project.cpp
test_cases/: intertest.bc  test10.bc  test5.bc  test6.bc  test7.bc  test8.bc  test9.bc
test_cases/custom/: example.bc  example.c  example.ll  example2.bc  example2.c  example2.ll  example3.bc  example3.c  example3.ll  example4.bc  example4.c  example4.ll  example5.bc  example5.c  example5.ll
